# meshcleaner

./: .gitignore  .gitmodules  CMakeLists.txt  README  http_server.cpp  http_server.hpp  main.cpp  manifoldtest.cpp  mesh_definitions.cpp  mesh_definitions.hpp  meshcleaner.cpp  meshcleaner_rest_server.cpp  meshcleanerworker.cpp  meshcleanerworker.hpp
lib_json/: README
stltools/: CMakeLists.txt
